# tested-fixture

./: Cargo.toml  README.md  README.tpl
macros/: Cargo.toml
macros/src/: lib.rs
src/: lib.rs
