workspace = { members = ["macros"] }

[package]
name = "tested-fixture"
version = "1.0.1"
authors = ["Daniel Bloom"]
edition = "2018"
rust-version = "1.69"
description = "Attribute macro for creating fixtures from tests"
documentation = "https://docs.rs/tested-fixture"
repository = "https://github.com/Daniel-Aaron-Bloom/tested-fixture"
license = "MIT"
keywords = ["test", "fixture"]
categories = ["development-tools::testing"]

[dependencies]
once_cell = "1"
tested-fixture-macros = { path = "./macros", version = "1" }

[badges]
github = { repository = "Daniel-Aaron-Bloom/tested-fixture", workflow = "Rust" }
