[package]
name = "tested-fixture-macros"
version = "1.0.0"
edition = "2018"
authors = ["Daniel Bloom"]
rust-version = "1.69"
description = "proc-macros for tested-fixture"
repository = "https://github.com/Daniel-Aaron-Bloom/tested-fixture"
license = "MIT"
keywords = ["test", "fixture", "macros"]
categories = ["development-tools::testing"]

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "3"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
